# ats-scrapers

./: .gitignore  CHANGELOG.md  JOB_SCHEMA.md  LICENSE  README.md  ai.py  ai_companies.json  brute_dict_discovery.py  company_discovery.py  env.example  export_utils.py  extract_salary_experience.py  fetch_job.py  full_pipeline.sh  main.py  monitor_discovery.sh  provider-description-matrix.md  prune_dead_tenants.py  prune_workable_thorough.py  pyproject.toml  render.yaml  requirements.txt  searxng_discovery.py  serpapi_discovery.py  urls.md  verify_migration.py
_legacy_discovery/: continuous_discovery.py  discover_recruitee_combined.py  discover_recruitee_companies.py  discover_recruitee_firecrawl.py  firecrawl_discovery.py  run_discovery.py
apple/: api_client.py  cache_manager.py  main.py
ashby/: ashby_companies.csv  main.py
ats-companies/: README.md  ashby.csv  avature.csv  bamboohr.csv  breezy.csv  cornerstone.csv  eightfold.csv  gem.csv  greenhouse.csv  icims.csv  infojobs_es.csv  jazzhr.csv  jobs_cz.csv  join_com.csv  lever.csv  mercor.csv  oracle.csv  personio.csv  phenom.csv  pinpoint.csv  recruitee.csv  recruiterbox.csv  rippling.csv  smartrecruiters.csv  successfactors.csv  taleo.csv  teamtailor.csv  workable.csv  workday.csv
avature/: api_client.py  avature_companies.csv  companies.csv  export_to_csv.py  main.py  publicreports_summary.md
bamboohr/: bamboohr_companies.csv
breezy/: breezy_companies.csv
cornerstone/: cornerstone_companies.csv
eightfold/: eightfold_companies.csv
examples/: scrape_company.py
gem/: main.py
google/: export_to_csv.py
greenhouse/: export_to_csv.py  greenhouse_companies.csv
icims/: icims_companies.csv
jazzhr/: jazzhr_companies.csv
jobhive/: .gitignore  pyproject.toml
join_com/: api_client.py  export_to_csv.py  join_companies.csv  main.py
lever/: export_to_csv.py  lever_companies.csv
mercor/: README.md  api_client.py  main.py
meta/: main.py
microsoft/: main.py
models/: join.py  oracle.py  personio.py  phenom.py  smartrecruiters.py
nvidia/: main.py
oracle/: IMPLEMENTATION_SUMMARY.md  README.md  enrich_company_names.py  export_to_csv.py  main.py  oracle_companies.csv  seed_known_companies.csv
personio/: api_client.py  discover_companies.py  export_to_csv.py  main.py  personio_companies.csv
phenom/: DISCOVERY_CHEATSHEET.md  DISCOVERY_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  companies.csv  detect_phenom.py  discover_from_theirstack.py  export_to_csv.py  extract_company_config.py  main.py
pinpoint/: pinpoint_companies.csv
recruitee/: recruitee_companies.csv
recruiterbox/: recruiterbox_companies.csv
rippling/: export_to_csv.py  main.py  rippling_companies.csv
scripts/: normalize_descriptions.py  run_pipeline.py
smartrecruiters/: export_to_csv.py  main.py  smartrecruiters_companies.csv
taleo/: taleo_companies.csv
teamtailor/: teamtailor_companies.csv
tesla/: README.md  main.py
tests/: conftest.py  test_apple.py  test_ashby.py  test_avature.py  test_bamboohr.py  test_breezy.py  test_builtin.py  (+47 more)
(+153 files in other folders)
