[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobhive-py"
version = "0.1.0"
description = "3.3M+ live jobs from 400 000+ companies, scraped directly from ATS sources. The open dataset and toolkit for job market data."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kalil Bouzigues", email = "kalil.bouzigues@gmail.com" },
]
keywords = [
    "jobs",
    "job-scraper",
    "job-search",
    "ats",
    "greenhouse",
    "lever",
    "workday",
    "ashby",
    "workable",
    "smartrecruiters",
    "hiring",
    "recruiting",
    "data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pandas>=2.0",
]

[project.optional-dependencies]
scrapers = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "html2text>=2024.0",
]
parquet = [
    "pyarrow>=15.0",
]
publish = [
    "boto3>=1.34",
    "pyarrow>=15.0",
]
discovery = [
    "firecrawl-py>=1.0",
]
all = [
    "jobhive-py[scrapers,parquet,publish,discovery]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs",
    "types-boto3",
]

[project.urls]
Homepage = "https://github.com/stapply-ai/ats-scrapers"
Documentation = "https://github.com/stapply-ai/ats-scrapers#readme"
Repository = "https://github.com/stapply-ai/ats-scrapers"
Issues = "https://github.com/stapply-ai/ats-scrapers/issues"
Changelog = "https://github.com/stapply-ai/ats-scrapers/blob/main/CHANGELOG.md"
Dataset = "https://storage.stapply.ai/jobhive/v1/manifest.json"

[project.scripts]
jobhive = "jobhive.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jobhive"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
# RUF001/2/3: tolerate Unicode dashes/quotes that real ATS payloads contain.
# RUF046: harmless `int(int_already)` calls happen in defensive casts.
ignore = ["E501", "RUF001", "RUF002", "RUF003", "RUF046"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
